2018-09-18  Patrick McGehearty  <patrick.mcgehearty@oracle.com>
	     Gerd Rausch <gerd.rausch@oracle.com>

	Orabug 28481550] Resolve funlockfile/flockfile issue.
	* sysdeps/pthread/flockfile.c (__flockfile):
	Match behavior of LOCK_STREAM.
	* sysdeps/pthread/funlockfile.c (__funlockfile):
	Match behavior of UNLOCK_STREAM.

2019-03-25  Mike Crowe  <mac@mcrowe.com>

	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
	pthread_rwlock_timedrdlock with calls to
	pthread_rwlock_timedwrlock to ensure that the latter is tested
	too. Use new function name in diagnostic messages too.

2019-01-31  Carlos O'Donell  <carlos@redhat.com>
	    Torvald Riegel  <triegel@redhat.com>
	    Rik Prohaska  <prohaska7@gmail.com>

	[BZ# 23844]
	* nptl/Makefile (tests): Add tst-rwlock-tryrdlock-stall, and
	tst-rwlock-trywrlock-stall.
	* nptl/pthread_rwlock_tryrdlock.c (__pthread_rwlock_tryrdlock):
	Wake waiters if PTHREAD_RWLOCK_FUTEX_USED is set.
	* nptl/pthread_rwlock_trywrlock.c (__pthread_rwlock_trywrlock):
	Set __wrphase_fute to 1 only if we started the write phase.
	* nptl/tst-rwlock-tryrdlock-stall.c: New file.
	* nptl/tst-rwlock-trywrlock-stall.c: New file.
	* support/Makefile (libsupport-routines): Add xpthread_rwlock_destroy.
	* support/xpthread_rwlock_destroy.c: New file.
	* support/xthread.h: Declare xpthread_rwlock_destroy.

2018-08-01  Carlos O'Donel  <carlos@redhat.com>

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.28".
	* include/features.h (__GLIBC_MINOR__): Set to 2.28.
	* NEWS: Add the list of bugs fixed in 2.28.

	* po/ca.po: Update to latest version.
	* po/cs.po: Likewise
	* po/da.po: Likewise
	* po/el.po: Likewise
	* po/eo.po: Likewise
	* po/es.po: Likewise
	* po/fi.po: Likewise
	* po/fr.po: Likewise
	* po/gl.po: Likewise
	* po/hu.po: Likewise
	* po/ia.po: Likewise
	* po/id.po: Likewise
	* po/it.po: Likewise
	* po/ja.po: Likewise
	* po/ko.po: Likewise
	* po/lt.po: Likewise
	* po/nb.po: Likewise
	* po/nl.po: Likewise
	* po/pt_BR.po: Likewise