@@ -2,5 +2,5 @@ ifeq ($(subdir),string)
 sysdep_routines += memcpy_generic memcpy_thunderx memcpy_thunderx2 \
 		   memcpy_falkor memcpy_a64fx \
 		   memmove_falkor memset_generic memset_falkor \
-		   memset_a64fx
+		   memset_a64fx strlen_generic strlen_asimd
 endif
